--- a/src/app/accounts/signin/signin.component.html
+++ b/src/app/accounts/signin/signin.component.html
@@ -3,7 +3,7 @@
         <aside class="col-12 col-sm-12 col-md-4">
             <div class="card">
                 <article class="card-body">
-                    <a class="float-right btn btn-outline-primary" [routerLink]="['/accounts/restore']">Restore account</a>
+                    <a class="float-right btn btn-outline-secondary" [routerLink]="['/accounts/restore']">Restore account</a>
                     <h4 class="card-title mb-4 mt-1">Sign in</h4>
                     <form (ngSubmit)="signin()" [formGroup]="form">
                         <div class="form-group">
