--- a/src/app/accounts/restore/restore.component.html
+++ b/src/app/accounts/restore/restore.component.html
@@ -43,6 +43,9 @@
                         <div class="form-group">
                             <button type="submit" class="btn btn-primary btn-block"> Restore </button>
                         </div>
+                        <div class="form-group">
+                            <button [routerLink]="['/accounts/signin']" class="btn btn-outline-primary btn-block"> Back </button>
+                        </div>
                     </form>
                 </article>
             </div>
