--- a/src/app/pages/layout/sidebar/sidebar.component.css
+++ b/src/app/pages/layout/sidebar/sidebar.component.css
@@ -21,43 +21,26 @@
     color: #ffffff;
 }
 
+.list-group>a i {
+    padding: 0 10px 0 10px;
+}
+
 .list-group-item:hover {
-    background-color: #d35613 !important;
+    background-color: rgb(211, 86, 19, 0.5) !important;
 }
 
 .list-group-item.active {
     outline: none;
     border: none;
-    background-color: #d35613 !important;
+    background-color: rgb(211, 86, 19, 0.2) !important;
     font-weight: bold;
+    border-right: 5px solid #d35613;
 }
 
-/* a {
-    margin-bottom: 1px solid #000;
+.list-group-item.active:hover {
+    background-color: rgb(211, 86, 19, 0.5) !important;
 }
 
-.list-group-item.active {
-    background-color: #fff !important;
-    opacity: 0.2;
-    color: #438eb9;
+.list-group-item.active i {
+    color: #d35613;
 }
-
-i {
-    margin-right: 5px;
-}
-
-.sidebar-heading a {
-    color: #fff;
-    font-size: 1em;
-}
-
-.bg-light {
-    background-color: #438eb9 !important;
-    color: #fff;
-}
-
-.bg-light a:hover {
-    background-color: #fff !important;
-    opacity: 0.5;
-    color: #438eb9;
-} */
