--- a/src/app/pages/send/send.component.html
+++ b/src/app/pages/send/send.component.html
@@ -11,6 +11,8 @@
                 <p *ngIf="form.controls.toAddress.errors.rangeLength">To address must be exactle 42 characters!</p>
             </span>
         </div>
+    </div>
+    <div class="form-row">
         <div class="form-group col-12 com-sm-12 col-md-6">
             <label for="amount">Amount</label>
             <input type="text" class="form-control" id="amount" formControlName="amount"
