--- a/src/app/accounts/create/create.component.html
+++ b/src/app/accounts/create/create.component.html
@@ -13,7 +13,7 @@
                         <div class="form-group">
                             <div class="text-center">
                                 <div class="btn-group" role="group">
-                                    <a [href]="fileUrl" download="mneumonic.txt" class="btn btn-lg btn-outline-secondary">
+                                    <a href="javascript:void(0)" (click)="downloadMneumonic()" class="btn btn-lg btn-outline-secondary">
                                         <i class="fa fa-download"></i>
                                     </a>
                                     <a href="javascript:void(0)" class="btn btn-lg  btn-outline-secondary" (click)="copyToClipboard()">
@@ -23,7 +23,8 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <button type="submit" class="btn btn-primary btn-block"> I saved my mneumonic </button>
+                            <button type="submit" class="btn btn-primary btn-block"> I saved my mneumonic
+                            </button>
                         </div>
                         <div class="form-group">
                             <button [routerLink]="['/accounts/signin']" class="btn btn-outline-primary btn-block"> Back
