--- a/src/app/pages/layout/sidebar/sidebar.component.html
+++ b/src/app/pages/layout/sidebar/sidebar.component.html
@@ -5,12 +5,9 @@
       class="list-group-item list-group-item-action bg-light">
       <i class="fa fa-columns"></i> Dashboard
     </a>
-    <a [routerLink]="['/pages/send']" routerLinkActive="active"
-      class="list-group-item list-group-item-action bg-light">
-      <i class="fa fa-share"></i> Send
-    </a>
-    <a href="https://etherscan.io/" target="blank" class="list-group-item list-group-item-action bg-light">
-      <i class="fa fa-external-link"></i> Transactions
-    </a>
+    <a [routerLink]="['/pages/wallet-details']" routerLinkActive="active"
+    class="list-group-item list-group-item-action bg-light">
+    <i class="fa fa-user"></i> Details
+  </a>
   </div>
 </div>
