--- a/src/app/pages/pages.app.component.html
+++ b/src/app/pages/pages.app.component.html
@@ -1,3 +1,4 @@
+<ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-newton-cradle" [fullScreen] = "true"><p style="color: white" > Loading </p></ngx-spinner>
 <div class="d-flex" id="wrapper" [ngClass]="{toggled: isToogled}">
     <app-sidebar></app-sidebar>
     <div id="page-content-wrapper">
